--- a/index.html
+++ b/index.html
@@ -3,32 +3,14 @@
 		
 	</head>
 	<body>
-		123
+		<p>
+        234
+        </p>
 	</body>
+    <script src="./jquery.js"></script>
 	<script>
-	 var preservedScriptAttributes = {
-                type: true,
-                src: true,
-                nonce: true,
-                noModule: true
-            };
-	function DOMEval(code, node, doc) {
-                doc = doc || document;
-                var i, val,
-                        script = doc.createElement("script");
-                script.text = code;
-                if (node) {
-                    for (i in preservedScriptAttributes) {
-                        val = node[i] || node.getAttribute && node.getAttribute(i);
-                        if (val) {
-                            script.setAttribute(i, val);
-                        }
-                    }
-                }
-                doc.head.appendChild(script)
-            }
-            var code = 'alert(123)'
-            var node = {src:'http://www.baidu.com'}
-        DOMEval(code, node)
+var a = {}
+$.extend(a,{name:a})
+console.log(a)
 	</script>
 </html>
